tests/macros/confirm/filter.stderr
error: option `filter` does not exist for kind `confirm`
 --> $DIR/filter.rs:2:45
  |
2 |     let q = discourse::questions![Confirm { filter: todo!() }];
  |                                             ^^^^^^
