tests/macros/confirm/filter.rs
fn main() {
    let q = discourse::questions![Confirm { filter: todo!() }];
}
